--- a/style.css
+++ b/style.css
@@ -8,14 +8,13 @@
 .container{
     width: 100%;
     height: 100vh;
-    
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .calculator{
-    
+    background-color: white;
     padding: 20px;
     border-radius: 10px;
 }
