--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
     box-shadow: rgba(0,0,0,0.1);
     background: transparent;
     font-size: 20px;
-    color: #fff;
+    color: #000;
     cursor: pointer;
     margin: 10px;
 }
