--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
     width: 60px;
     height: 60px;
     border-radius: 10px;
-    box-shadow: rgba(0,0,0,0.1);
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     background: transparent;
     font-size: 20px;
     color: #000;
